--- a/package.json
+++ b/package.json
@@ -27,5 +27,14 @@
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "sqlite3": "^5.1.7"
+  },
+  "devDependencies": {
+    "@types/node": "^25.1.0",
+    "@types/react": "^19.2.10",
+    "@types/react-dom": "^19.2.3",
+    "autoprefixer": "^10.4.24",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.19",
+    "typescript": "^5.9.3"
   }
 }
